--- a/resources.html
+++ b/resources.html
@@ -102,7 +102,6 @@
   <li><b>National Climatic Data Center:</b> <a style="color:black" href="https://www7.ncdc.noaa.gov/CDO/cdopoemain.cmd?datasetabbv=DS3505&countryabbv=&georegionabbv=&resolution=40" target="_blank">Surface Data Hourly Global</a></li>
 </ul>
 
-   <!--<a style="color:black" href="" target="_blank"></a>-->
 <div id="tropicalcyclones" class="section-title">
     Tropical Cyclones
 </div>
@@ -119,10 +118,18 @@
   <li><b>Southeast Indian Ocean/Southwest Pacific (Australian Region):</b> <a style="color:black" href="http://www.bom.gov.au/cyclone/" target="_blank">Australian Bureau of Meteorology</a></li>
   <li><b>Southeast Indian Ocean:</b> <a style="color:black" href="http://meteo.bmkg.go.id/siklon" target="_blank">Indonesian Agency for Meteorology</a></li>
   <li><b>Southwest Pacific Ocean:</b> <a style="color:black" href="http://www.bom.gov.au/cosppac/countries/Papua-New-Guinea/" target="_blank">Papua New Guinea Meteorological Service</a></li>
-  <li><b>South Pacific:</b> <a style="color:black" href="https://www.met.gov.fj/" target="_blank">Fiji Meteorological Service </a> |
-  <a style="color:black" href="https://www.metservice.com/national" target="_blank">MetService of New Zealand</a>
+  <li><b>South Pacific:</b> <a style="color:black" href="https://www.met.gov.fj/" target="_blank">Fiji Meteorological Service </a> | <a style="color:black" href="https://www.metservice.com/national" target="_blank">MetService of New Zealand</a>
   </li>
 </ul>  
+
+<h5 id="tccenters">&raquo; Other agencies</h5> 
+<ul class="nospace">  
+  <li> <b>Joint Typhoon Warning Center:</b> (<a style="color:black" href="https://www.metoc.navy.mil/jtwc/jtwc.html" target="_blank">Official Website</a>)</li>
+  <li> <b>Canadian Hurricane Centre:</b> (<a style="color:black" href="https://www.ec.gc.ca/ouragans-hurricanes/" target="_blank">Official Website</a>)</li> 
+  <li> <b>NOAA's Hurricane Research Division:</b> (<a style="color:black" href="https://www.aoml.noaa.gov/hurricane-research-division/" target="_blank">Official Website</a>, <a style="color:black" href="https://noaahrd.wordpress.com/" target="_blank">Blog</a>)</li>   
+</ul>   
+  
+   <!--<a style="color:black" href="" target="_blank"></a>-->
   
 <div id="water" class="section-title">
     Water
