--- a/resources.html
+++ b/resources.html
@@ -41,6 +41,7 @@
 <li><a style="color:#4d4d4d" href="#tropicalcyclones">Tropical Cyclones</a></li>
   <ul>
     <li><a style="color:#4d4d4d" href="#tccenters">&raquo; Tropical cyclone centers (by area of responsibility)</a></li>
+    <li><a style="color:#4d4d4d" href="#tcotheragencies">&raquo; Other agencies</a></li>   
   </ul>
 <li><a style="color:#4d4d4d" href="#water">Water</a></li>
 </ul>
@@ -122,7 +123,7 @@
   </li>
 </ul>  
 
-<h5 id="tccenters">&raquo; Other agencies</h5> 
+<h5 id="tcotheragencies">&raquo; Other agencies</h5> 
 <ul class="nospace">  
   <li> <b>Joint Typhoon Warning Center:</b> (<a style="color:black" href="https://www.metoc.navy.mil/jtwc/jtwc.html" target="_blank">Official Website</a>)</li>
   <li> <b>Canadian Hurricane Centre:</b> (<a style="color:black" href="https://www.ec.gc.ca/ouragans-hurricanes/" target="_blank">Official Website</a>)</li> 
