--- a/resources.html
+++ b/resources.html
@@ -42,11 +42,14 @@
   <ul>
     <li><a style="color:#4d4d4d" href="#tccenters">&raquo; Tropical cyclone centers (by area of responsibility)</a></li>
     <li><a style="color:#4d4d4d" href="#tcotheragencies">&raquo; Other agencies</a></li>   
+    <li><a style="color:#4d4d4d" href="#tccurrentobs">&raquo; Current observations</a></li>  
+    <li><a style="color:#4d4d4d" href="#tctrackdata">&raquo; Real-Time Model Guidance</a></li>  
+    <li><a style="color:#4d4d4d" href="#tctrackdata">&raquo; Track data</a></li>  
+    <li><a style="color:#4d4d4d" href="#tcotherarchives">&raquo; Other archive</a></li>
   </ul>
 <li><a style="color:#4d4d4d" href="#water">Water</a></li>
 </ul>
-</div> 
-  
+</div>  
  
 <div id="weatherandclimate" class="section-title">
     Weather and Climate
@@ -129,6 +132,14 @@
   <li> <b>Canadian Hurricane Centre:</b> (<a style="color:black" href="https://www.ec.gc.ca/ouragans-hurricanes/" target="_blank">Official Website</a>)</li> 
   <li> <b>NOAA's Hurricane Research Division:</b> (<a style="color:black" href="https://www.aoml.noaa.gov/hurricane-research-division/" target="_blank">Official Website</a>, <a style="color:black" href="https://noaahrd.wordpress.com/" target="_blank">Blog</a>)</li>   
 </ul>   
+ 
+<h5 id="tccurrentobs">&raquo; Current observations</h5> 
+  
+<h5 id="tcmodelguidance">&raquo; Real-Time Model Guidance</h5>   
+  
+<h5 id="tctrackdata">&raquo; Track data</h5>    
+  
+<h5 id="tcotherarchives">&raquo; Other archives</h5>    
   
    <!--<a style="color:black" href="" target="_blank"></a>-->
   
