--- a/resources.html
+++ b/resources.html
@@ -45,7 +45,7 @@
     <li><a style="color:#4d4d4d" href="#tccurrentobs">&raquo; Current observations</a></li>  
     <li><a style="color:#4d4d4d" href="#tctrackdata">&raquo; Real-Time Model Guidance</a></li>  
     <li><a style="color:#4d4d4d" href="#tctrackdata">&raquo; Track data</a></li>  
-    <li><a style="color:#4d4d4d" href="#tcotherarchives">&raquo; Other archive</a></li>
+    <li><a style="color:#4d4d4d" href="#tcotherarchives">&raquo; Other archives</a></li>
   </ul>
 <li><a style="color:#4d4d4d" href="#water">Water</a></li>
 </ul>
@@ -134,6 +134,17 @@
 </ul>   
  
 <h5 id="tccurrentobs">&raquo; Current observations</h5> 
+<ul class="nospace">  
+  <li> <b>Surface Analysis:</b> <a style="color:black" href="https://ocean.weather.gov/UA/Atl_Tropics.gif" target="_blank">Atlantic Tropical</a> | <a style="color:black" href=" https://ocean.weather.gov/UA/Pac_Tropics.gif" target="_blank">Pacific Tropical</a> 
+  </li>
+  <li> <b>Satellite Imagery:</b> <a style="color:black" href="http://tropic.ssec.wisc.edu/" target="_blank">Cooperative Institute for Meteorological Satellite Studies</a> |
+     <a style="color:black" href="https://www.star.nesdis.noaa.gov/GOES/" target="_blank">GOES Image Viewer</a>
+  </li>
+  <li> <b>Aircraft Reconnaissance:</b> <a style="color:black" href="https://www.nhc.noaa.gov/recon.php" target="_blank">National Hurricane Center</a> | <a style="color:black" href="https://www.tropicaltidbits.com/recon/" target="_blank">Tropical Tidbits</a>
+  </li>
+    
+    
+</ul>    
   
 <h5 id="tcmodelguidance">&raquo; Real-Time Model Guidance</h5>   
   
