--- a/resources.html
+++ b/resources.html
@@ -43,7 +43,7 @@
     <li><a style="color:#4d4d4d" href="#tccenters">&raquo; Tropical cyclone centers (by area of responsibility)</a></li>
     <li><a style="color:#4d4d4d" href="#tcotheragencies">&raquo; Other agencies</a></li>   
     <li><a style="color:#4d4d4d" href="#tccurrentobs">&raquo; Current observations</a></li>  
-    <li><a style="color:#4d4d4d" href="#tctrackdata">&raquo; Real-Time Model Guidance</a></li>  
+    <li><a style="color:#4d4d4d" href="#tcmodelguidance">&raquo; Real-Time Model Guidance</a></li>  
     <li><a style="color:#4d4d4d" href="#tctrackdata">&raquo; Track data</a></li>  
     <li><a style="color:#4d4d4d" href="#tcotherarchives">&raquo; Other archives</a></li>
   </ul>
@@ -141,12 +141,20 @@
      <a style="color:black" href="https://www.star.nesdis.noaa.gov/GOES/" target="_blank">GOES Image Viewer</a>
   </li>
   <li> <b>Aircraft Reconnaissance:</b> <a style="color:black" href="https://www.nhc.noaa.gov/recon.php" target="_blank">National Hurricane Center</a> | <a style="color:black" href="https://www.tropicaltidbits.com/recon/" target="_blank">Tropical Tidbits</a>
-  </li>
-    
-    
+  </li> 
 </ul>    
   
-<h5 id="tcmodelguidance">&raquo; Real-Time Model Guidance</h5>   
+<h5 id="tcmodelguidance">&raquo; Real-Time Model Guidance</h5> 
+<ul class="nospace">
+ <li> <b>Kerry Emanuel, MIT:</b> <a style="color:black" href="http://wind.mit.edu/~emanuel/storm.html" target="_blank">Coupled Hurricane Intensity Prediction System</a> </li> 
+ <li> <b>Brian Tang, University at Albany:</b> <a style="color:black" href="http://www.atmos.albany.edu/facstaff/tang/tcguidance/index.html" target="_blank">TC guidance, model trends, and verification statistics</a> </li>  
+ <li> <b>Tropical Cyclone Guidance Project, NCAR-RAL:</b> <a style="color:black" href="http://hurricanes.ral.ucar.edu/realtime/current/" target="_blank">Real-Time Guidance</a> </li>   
+<li> <b>Fuqing Zhang and Yonghui Weng, Penn State University:</b> <a style="color:black" href="http://hfip.psu.edu/realtime/AL2015/forecast_track.html" target="_blank">WRF/EnKF Real-time Atlantic Hurricane Forecast</a> </li>
+<li> <b>Levi Cowan: </b> <a style="color:black" href="https://www.tropicaltidbits.com/analysis/models/" target="_blank">Tropical Tidbits</a> </li>   
+</ul>   
+  
+  
+  
   
 <h5 id="tctrackdata">&raquo; Track data</h5>    
   
