--- a/resources.html
+++ b/resources.html
@@ -150,13 +150,16 @@
  <li> <b>Brian Tang, University at Albany:</b> <a style="color:black" href="http://www.atmos.albany.edu/facstaff/tang/tcguidance/index.html" target="_blank">TC guidance, model trends, and verification statistics</a> </li>  
  <li> <b>Tropical Cyclone Guidance Project, NCAR-RAL:</b> <a style="color:black" href="http://hurricanes.ral.ucar.edu/realtime/current/" target="_blank">Real-Time Guidance</a> </li>   
 <li> <b>Fuqing Zhang and Yonghui Weng, Penn State University:</b> <a style="color:black" href="http://hfip.psu.edu/realtime/AL2015/forecast_track.html" target="_blank">WRF/EnKF Real-time Atlantic Hurricane Forecast</a> </li>
-<li> <b>Levi Cowan: </b> <a style="color:black" href="https://www.tropicaltidbits.com/analysis/models/" target="_blank">Tropical Tidbits</a> </li>   
+<li> <b>Levi Cowan: </b> <a style="color:black" href="https://www.tropicaltidbits.com/analysis/models/" target="_blank">Tropical Tidbits</a> </li> 
+<li> <b>U.S. National Oceanic and Atmospheric Administration: </b> <a style="color:black" href="https://storm.aoml.noaa.gov/viewer/" target="_blank">AOML Hurricane Model Viewer</a> </li>   
 </ul>   
-  
-  
-  
-  
+ 
 <h5 id="tctrackdata">&raquo; Track data</h5>    
+<ul class="nospace">
+  <li><b>National Hurricane Center's Hurricane Database:</b> </li>
+  <li><b>Joint Typhoon Warning Center's Best Track Data:</b> </li>
+  <li><b>International Best Track Archive for Climate Stewardship (IBTrACS):</b> </li>
+</ul>     
   
 <h5 id="tcotherarchives">&raquo; Other archives</h5>    
   
