--- a/resources.html
+++ b/resources.html
@@ -151,16 +151,27 @@
  <li> <b>Tropical Cyclone Guidance Project, NCAR-RAL:</b> <a style="color:black" href="http://hurricanes.ral.ucar.edu/realtime/current/" target="_blank">Real-Time Guidance</a> </li>   
 <li> <b>Fuqing Zhang and Yonghui Weng, Penn State University:</b> <a style="color:black" href="http://hfip.psu.edu/realtime/AL2015/forecast_track.html" target="_blank">WRF/EnKF Real-time Atlantic Hurricane Forecast</a> </li>
 <li> <b>Levi Cowan: </b> <a style="color:black" href="https://www.tropicaltidbits.com/analysis/models/" target="_blank">Tropical Tidbits</a> </li> 
-<li> <b>U.S. National Oceanic and Atmospheric Administration: </b> <a style="color:black" href="https://storm.aoml.noaa.gov/viewer/" target="_blank">AOML Hurricane Model Viewer</a> </li>   
+<li> <b>U.S. National Oceanic and Atmospheric Administration: </b> <a style="color:black" href="https://storm.aoml.noaa.gov/viewer/" target="_blank">AOML Hurricane Model Viewer</a> </li> 
+<li> <b>Matt Onderlinde: </b> <a style="color:black" href="https://www.weathernerds.org/" target="_blank">Weathernerds</a> </li>   
 </ul>   
  
 <h5 id="tctrackdata">&raquo; Track data</h5>    
 <ul class="nospace">
-  <li><b>National Hurricane Center's Hurricane Database:</b> </li>
-  <li><b>Joint Typhoon Warning Center's Best Track Data:</b> </li>
-  <li><b>International Best Track Archive for Climate Stewardship (IBTrACS):</b> </li>
+  <li><b>National Hurricane Center's Hurricane Database:</b> <a style="color:black" href="https://www.aoml.noaa.gov/hrd/hurdat/Data_Storm.html" target="_blank">Official Website</a> | 
+  <a style="color:black" href="https://www.aoml.noaa.gov/hrd/hurdat/hurdat2.html" target="_blank">North Atlantic</a> |
+  <a style="color:black" href="https://www.aoml.noaa.gov/hrd/hurdat/tracks-hurdat2-epac-1949-2013-jul14.html" target="_blank">Northeast Pacific</a>  
+  </li>
+  <li><b>Joint Typhoon Warning Center's Best Track Data:</b> <a style="color:black" href="https://www.usno.navy.mil/NOOC/nmfc-ph/RSS/jtwc/best_tracks/" target="_blank">Official Website</a> |
+  <a style="color:black" href="https://www.usno.navy.mil/NOOC/nmfc-ph/RSS/jtwc/best_tracks/shindex.php" target="_blank">Southern Hemisphere</a> |
+  <a style="color:black" href="https://www.usno.navy.mil/NOOC/nmfc-ph/RSS/jtwc/best_tracks/ioindex.php" target="_blank">Northern Indian Ocean</a> |
+  <a style="color:black" href="https://www.usno.navy.mil/NOOC/nmfc-ph/RSS/jtwc/best_tracks/wpindex.php" target="_blank">Western North Pacific Ocean</a>
+ </li>
+  <li><b>International Best Track Archive for Climate Stewardship (IBTrACS):</b> <a style="color:black" href="https://www.ncdc.noaa.gov/ibtracs/" target="_blank">Official Website</a> |
+   <a style="color:black" href="https://www.ncdc.noaa.gov/ibtracs/index.php?name=ib-v4-access" target="_blank">Data</a> 
+  </li>
 </ul>     
   
+
 <h5 id="tcotherarchives">&raquo; Other archives</h5>    
   
    <!--<a style="color:black" href="" target="_blank"></a>-->
