--- a/resources.html
+++ b/resources.html
@@ -137,7 +137,7 @@
 <ul class="nospace">  
   <li> <b>Surface Analysis:</b> <a style="color:black" href="https://ocean.weather.gov/UA/Atl_Tropics.gif" target="_blank">Atlantic Tropical</a> | <a style="color:black" href=" https://ocean.weather.gov/UA/Pac_Tropics.gif" target="_blank">Pacific Tropical</a> 
   </li>
-  <li> <b>Satellite Imagery:</b> <a style="color:black" href="http://tropic.ssec.wisc.edu/" target="_blank">Cooperative Institute for Meteorological Satellite Studies</a> |
+  <li> <b>Satellite Imagery:</b> <a style="color:black" href="http://tropic.ssec.wisc.edu/" target="_blank">Cooperative Institute for Meteorological Satellite Studies (CIMSS)</a> |
      <a style="color:black" href="https://www.star.nesdis.noaa.gov/GOES/" target="_blank">GOES Image Viewer</a>
   </li>
   <li> <b>Aircraft Reconnaissance:</b> <a style="color:black" href="https://www.nhc.noaa.gov/recon.php" target="_blank">National Hurricane Center</a> | <a style="color:black" href="https://www.tropicaltidbits.com/recon/" target="_blank">Tropical Tidbits</a>
@@ -171,16 +171,17 @@
   </li>
 </ul>     
   
-
 <h5 id="tcotherarchives">&raquo; Other archives</h5>    
-  
-   <!--<a style="color:black" href="" target="_blank"></a>-->
-  
+<ul class="nospace">
+  <li><b>Storm-centered Satellite Imagery:</b> <a style="color:black" href="https://www.nrlmry.navy.mil/TC.html" target="_blank"></a></li>
+  <li><b>CIMSS Tropical Cyclones:</b> <a style="color:black" href="http://tropic.ssec.wisc.edu/archive/" target="_blank">Data Archive</a> </li>
+</ul>
+ 
 <div id="water" class="section-title">
     Water
 </div>  
   
-  
+ <!--<a style="color:black" href="" target="_blank"></a>--> 
 <footer>
   <div id="footer-content">
     <p> </p>
