--- a/resources.html
+++ b/resources.html
@@ -48,6 +48,8 @@
     <li><a style="color:#4d4d4d" href="#tcotherarchives">&raquo; Other archives</a></li>
   </ul>
 <li><a style="color:#4d4d4d" href="#water">Water</a></li>
+<li><a style="color:#4d4d4d" href="#wxchallenge">WxChallenge</a></li>
+<li><a style="color:#4d4d4d" href="#opportunities">Opportunities</a></li>
 </ul>
 </div>  
  
@@ -173,12 +175,20 @@
   
 <h5 id="tcotherarchives">&raquo; Other archives</h5>    
 <ul class="nospace">
-  <li><b>Storm-centered Satellite Imagery:</b> <a style="color:black" href="https://www.nrlmry.navy.mil/TC.html" target="_blank"></a></li>
+  <li><b>Storm-centered Satellite Imagery:</b> <a style="color:black" href="https://www.nrlmry.navy.mil/TC.html" target="_blank"> Naval Research Laboratory</a></li>
   <li><b>CIMSS Tropical Cyclones:</b> <a style="color:black" href="http://tropic.ssec.wisc.edu/archive/" target="_blank">Data Archive</a> </li>
 </ul>
  
 <div id="water" class="section-title">
     Water
+</div>  
+  </br>
+<div id="wxchallenge" class="section-title">
+    WxChallenge
+</div>  
+ </br>  
+<div id="opportunities" class="section-title">
+    Opportunities
 </div>  
   
  <!--<a style="color:black" href="" target="_blank"></a>--> 
