--- a/resources.html
+++ b/resources.html
@@ -33,7 +33,7 @@
   <ul>
     <li><a style="color:#4d4d4d" href="#agencies">&raquo; Agencies</a></li>
     <li><a style="color:#4d4d4d" href="#observations">&raquo; Observations </a></li>
-    <li><a style="color:#4d4d4d" href="#modelguidance">&raquo; Model Guidance </a></li>
+    <li><a style="color:#4d4d4d" href="#modelguidance">&raquo; Model guidance </a></li>
     <li><a style="color:#4d4d4d" href="#reanalysis">&raquo; Reanalysis </a></li>
     <li><a style="color:#4d4d4d" href="#climatology">&raquo; Climatology </a></li>
   </ul>
@@ -43,7 +43,7 @@
     <li><a style="color:#4d4d4d" href="#tccenters">&raquo; Tropical cyclone centers (by area of responsibility)</a></li>
     <li><a style="color:#4d4d4d" href="#tcotheragencies">&raquo; Other agencies</a></li>   
     <li><a style="color:#4d4d4d" href="#tccurrentobs">&raquo; Current observations</a></li>  
-    <li><a style="color:#4d4d4d" href="#tcmodelguidance">&raquo; Real-Time Model Guidance</a></li>  
+    <li><a style="color:#4d4d4d" href="#tcmodelguidance">&raquo; Real-Time model guidance</a></li>  
     <li><a style="color:#4d4d4d" href="#tctrackdata">&raquo; Track data</a></li>  
     <li><a style="color:#4d4d4d" href="#tcotherarchives">&raquo; Other archives</a></li>
   </ul>
@@ -88,7 +88,7 @@
 <li> <b> Drought Monitor:</b> <a style="color:black" href="https://droughtmonitor.unl.edu/" target="_blank">United States</a> | <a style="color:black" href="https://droughtmonitor.unl.edu/CurrentMap/StateDroughtMonitor.aspx?PR" target="_blank">Puerto Rico</a> </li>  
 </ul>  
   
-<h5 id="modelguidance">&raquo; Model Guidance</h5>
+<h5 id="modelguidance">&raquo; Model guidance</h5>
 <ul class="nospace"> 
   <li><a style="color:black" href="https://mag.ncep.noaa.gov/model-guidance-model-area.php" target="_blank">NWS Model Analysis and Guidance website</a></li>
   <li><a style="color:black" href="https://www.tropicaltidbits.com/analysis/models/" target="_blank">Levi Cowan's Tropical Tidbits</a></li> 
@@ -111,6 +111,57 @@
 <div id="tropicalcyclones" class="section-title">
     Tropical Cyclones
 </div>
+  
+  
+  <div class="container">
+<div class="row">
+<div class="col-md-3">
+<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+    <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="headingOne">
+             <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          Collapsible Group Item #1
+        </a>
+      </h4>
+
+        </div>
+        <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+            <div class="panel-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.le VHS.</div>
+        </div>
+    </div>
+    <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="headingTwo">
+             <h4 class="panel-title">
+        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          Collapsible Group Item #2
+        </a>
+      </h4>
+
+        </div>
+        <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+            <div class="panel-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.</div>
+        </div>
+    </div>
+    <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="headingThree">
+             <h4 class="panel-title">
+        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          Collapsible Group Item #3
+        </a>
+      </h4>
+
+        </div>
+        <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+            <div class="panel-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. </div>
+        </div>
+    </div>
+</div>
+</div>
+</div>
+</div>
+  
+  
 <h5 id="tccenters">&raquo; Tropical cyclone centers (by area of responsibility)</h5>  
 <ul class="nospace">  
   <li><b>Atlantic and Eastern Pacific:</b> <a style="color:black" href="https://www.nhc.noaa.gov/" target="_blank"></a>U.S. National Hurricane Center
@@ -146,7 +197,7 @@
   </li> 
 </ul>    
   
-<h5 id="tcmodelguidance">&raquo; Real-Time Model Guidance</h5> 
+<h5 id="tcmodelguidance">&raquo; Real-time model guidance</h5> 
 <ul class="nospace">
  <li> <b>Kerry Emanuel, MIT:</b> <a style="color:black" href="http://wind.mit.edu/~emanuel/storm.html" target="_blank">Coupled Hurricane Intensity Prediction System</a> </li> 
  <li> <b>Brian Tang, University at Albany:</b> <a style="color:black" href="http://www.atmos.albany.edu/facstaff/tang/tcguidance/index.html" target="_blank">TC guidance, model trends, and verification statistics</a> </li>  
