--- a/resources.html
+++ b/resources.html
@@ -108,7 +108,7 @@
   <li><b>National Climatic Data Center:</b> <a style="color:black" href="https://www7.ncdc.noaa.gov/CDO/cdopoemain.cmd?datasetabbv=DS3505&countryabbv=&georegionabbv=&resolution=40" target="_blank">Surface Data Hourly Global</a></li>
 </ul>
 
-<div id="tropicalcyclones" class="section-title">
+<div id="tropicalcyclones" class="section-title" style="text-align:center">
     Tropical Cyclones
 </div>
   </br>
