--- a/resources.html
+++ b/resources.html
@@ -117,7 +117,9 @@
 <label for="title1"><b>Quick view of current tropical cyclone activity</b></label>
 
 <div class="content">
-<p>Your content goes here.</p>
+<p class="centered"> Global </p>
+<a href="http://tropic.ssec.wisc.edu/" target="_blank">
+  <img border="0" src="./img/hurricane_satradar_SAM_simulation.png" class="centered"></a>
 </div>
 </div> 
    
