--- a/resources.html
+++ b/resources.html
@@ -119,7 +119,7 @@
 <div class="content">
 <p class="centered"> Global </p>
 <a href="http://tropic.ssec.wisc.edu/" target="_blank">
-  <img border="0" src="./img/hurricane_satradar_SAM_simulation.png" class="centered"></a>
+  <img border="0" src="http://tropic.ssec.wisc.edu/STORMPLOT.GIF" class="centered"></a>
 </div>
 </div> 
    
