--- a/resources.html
+++ b/resources.html
@@ -117,9 +117,12 @@
 <label for="title1"><b>Quick view of current tropical cyclone activity</b></label>
 
 <div class="content">
-<p class="centered"> Global </p>
+  <p class="centered"> <b>Global</b> </p>
 <a href="http://tropic.ssec.wisc.edu/" target="_blank">
   <img border="0" src="http://tropic.ssec.wisc.edu/STORMPLOT.GIF" class="centered"></a>
+  <p class="centered"> <b>Atlantic</b> </p>
+  <a href="https://www.nhc.noaa.gov/" target="_blank">
+    <img border="0" src="https://www.nhc.noaa.gov/xgtwo/two_atl_0d0.png?311748" class="centered"></a>
 </div>
 </div> 
    
