--- a/resources.html
+++ b/resources.html
@@ -163,8 +163,10 @@
   
 <h5 id="tcmodelguidance">&raquo; Real-time model guidance</h5> 
 <ul class="nospace">
- <li> <b>Kerry Emanuel, MIT:</b> <a style="color:black" href="http://wind.mit.edu/~emanuel/storm.html" target="_blank">Coupled Hurricane Intensity Prediction System</a> </li> 
- <li> <b>Brian Tang, University at Albany:</b> <a style="color:black" href="http://www.atmos.albany.edu/facstaff/tang/tcguidance/index.html" target="_blank">TC guidance, model trends, and verification statistics</a> </li>  
+ <li> <b>Kerry Emanuel, MIT:</b> <a style="color:black" href="http://wind.mit.edu/~emanuel/storm.html" target="_blank">Coupled Hurricane Intensity Prediction System</a> |
+  <a style="color:black" href="https://tcs.mit.edu/" target="_blank">Forecasts of Hurricanes using Large-Ensemble Outputs</a> 
+  </li> 
+  <li> <b>Brian Tang, University at Albany:</b> <a style="color:black" href="http://www.atmos.albany.edu/facstaff/tang/tcguidance/index.html" target="_blank">TC guidance, model trends, and verification statistics</a> </li>  
  <li> <b>Tropical Cyclone Guidance Project, NCAR-RAL:</b> <a style="color:black" href="http://hurricanes.ral.ucar.edu/realtime/current/" target="_blank">Real-Time Guidance</a> </li>   
 <li> <b>Fuqing Zhang and Yonghui Weng, Penn State University:</b> <a style="color:black" href="http://hfip.psu.edu/realtime/AL2015/forecast_track.html" target="_blank">WRF/EnKF Real-time Atlantic Hurricane Forecast</a> </li>
 <li> <b>Levi Cowan: </b> <a style="color:black" href="https://www.tropicaltidbits.com/analysis/models/" target="_blank">Tropical Tidbits</a> </li> 
