--- a/resources.html
+++ b/resources.html
@@ -155,7 +155,8 @@
   <li> <b>Surface Analysis:</b> <a style="color:black" href="https://ocean.weather.gov/UA/Atl_Tropics.gif" target="_blank">Atlantic Tropical</a> | <a style="color:black" href=" https://ocean.weather.gov/UA/Pac_Tropics.gif" target="_blank">Pacific Tropical</a> 
   </li>
   <li> <b>Satellite Imagery:</b> <a style="color:black" href="http://tropic.ssec.wisc.edu/" target="_blank">Cooperative Institute for Meteorological Satellite Studies (CIMSS)</a> |
-     <a style="color:black" href="https://www.star.nesdis.noaa.gov/GOES/" target="_blank">GOES Image Viewer</a>
+     <a style="color:black" href="https://www.star.nesdis.noaa.gov/GOES/" target="_blank">GOES Image Viewer</a></br>
+<a style="color:black" href="http://tropic.ssec.wisc.edu/real-time/tc_diurnal_cycle/tc_diurnal_cycle.php" target="_blank">CIMSS Diurnal Pulsing</a>
   </li>
   <li> <b>Aircraft Reconnaissance:</b> <a style="color:black" href="https://www.nhc.noaa.gov/recon.php" target="_blank">National Hurricane Center</a> | <a style="color:black" href="https://www.tropicaltidbits.com/recon/" target="_blank">Tropical Tidbits</a>
   </li> 
@@ -194,6 +195,7 @@
 <ul class="nospace">
   <li><b>Storm-centered Satellite Imagery:</b> <a style="color:black" href="https://www.nrlmry.navy.mil/TC.html" target="_blank"> Naval Research Laboratory</a></li>
   <li><b>CIMSS Tropical Cyclones:</b> <a style="color:black" href="http://tropic.ssec.wisc.edu/archive/" target="_blank">Data Archive</a> </li>
+  <li><b>Brian McNoldy:</b> <a style="color:black" href="http://bmcnoldy.rsmas.miami.edu/tropics/radar/" target="_blank">Tropical Cyclone Radar Loops</a> </li>
 </ul>
  
 <div id="water" class="section-title">
