--- a/resources.html
+++ b/resources.html
@@ -48,7 +48,13 @@
     <li><a style="color:#4d4d4d" href="#tcotherarchives">&raquo; Other archives</a></li>
   </ul>
 <li><a style="color:#4d4d4d" href="#water">Water</a></li>
+  <ul>
+    <li><a style="color:#4d4d4d" href="#elevationatdampsite">&raquo; Elevation at Damsite</a></li>
+  </ul>
 <li><a style="color:#4d4d4d" href="#wxchallenge">WxChallenge</a></li>
+  <ul>
+    <li><a style="color:#4d4d4d" href="#officialwebsite">&raquo; Official Website</a></li>
+  </ul>  
 <li><a style="color:#4d4d4d" href="#opportunities">Opportunities</a></li>
 </ul>
 </div>  
@@ -201,11 +207,22 @@
 <div id="water" class="section-title">
     Water
 </div>  
-  </br>
+
+<h5 id="elevationatdampsite">&raquo; Elevation at Damsite</h5>
+<ul class="nospace"> 
+  <li> <b> Puerto Rico:</b> <a style="color:black" href="https://nwis.waterdata.usgs.gov/nwisweb/graph?agency_cd=USGS&site_no=50059000&parm_cd=62616&period=7" target="_blank">Carraízo</a> | <a style="color:black" href="https://nwis.waterdata.usgs.gov/nwisweb/graph?agency_cd=USGS&site_no=50045000&parm_cd=62616&period=7" target="_blank">La Plata</a> </li>
+</ul>
+
 <div id="wxchallenge" class="section-title">
     WxChallenge
 </div>  
- </br>  
+ 
+<h5 id="officialwebsite">&raquo; Official Website</h5>
+<ul class="nospace"> 
+  <li> a style="color:black" href="https://www.wxchallenge.com/" target="_blank">Home</a> | a style="color:black" href="https://www.wxchallenge.com/submit_forecast.php" target="_blank">Submit Forecast</a> | a style="color:black" href="https://www.wxchallenge.com/distribution.php" target="_blank">Distributions</a> | <a style="color:black" href="https://www.wxchallenge.com/results.php" target="_blank">Results</a> </li>
+</ul>
+
+
 <div id="opportunities" class="section-title">
     Opportunities
 </div>  
