--- a/resources.html
+++ b/resources.html
@@ -219,7 +219,7 @@
  
 <h5 id="officialwebsite">&raquo; Official Website</h5>
 <ul class="nospace"> 
-  <li> a style="color:black" href="https://www.wxchallenge.com/" target="_blank">Home</a> | a style="color:black" href="https://www.wxchallenge.com/submit_forecast.php" target="_blank">Submit Forecast</a> | a style="color:black" href="https://www.wxchallenge.com/distribution.php" target="_blank">Distributions</a> | <a style="color:black" href="https://www.wxchallenge.com/results.php" target="_blank">Results</a> </li>
+  <li> <a style="color:black" href="https://www.wxchallenge.com/" target="_blank">Home</a> | <a style="color:black" href="https://www.wxchallenge.com/submit_forecast.php" target="_blank">Submit Forecast</a> | <a style="color:black" href="https://www.wxchallenge.com/distribution.php" target="_blank">Distributions</a> | <a style="color:black" href="https://www.wxchallenge.com/results.php" target="_blank">Results</a> </li>
 </ul>
 
 
