--- a/resources.html
+++ b/resources.html
@@ -54,6 +54,7 @@
 <li><a style="color:#4d4d4d" href="#wxchallenge">WxChallenge</a></li>
   <ul>
     <li><a style="color:#4d4d4d" href="#officialwebsite">&raquo; Official Website</a></li>
+     <li><a style="color:#4d4d4d" href="#forecastingtools">&raquo; Forecasting Tools</a></li>
   </ul>  
 <li><a style="color:#4d4d4d" href="#opportunities">Opportunities</a></li>
 </ul>
@@ -220,6 +221,16 @@
 <h5 id="officialwebsite">&raquo; Official Website</h5>
 <ul class="nospace"> 
   <li> <a style="color:black" href="https://www.wxchallenge.com/" target="_blank">Home</a> | <a style="color:black" href="https://www.wxchallenge.com/submit_forecast.php" target="_blank">Submit Forecast</a> | <a style="color:black" href="https://www.wxchallenge.com/distribution.php" target="_blank">Distributions</a> | <a style="color:black" href="https://www.wxchallenge.com/results.php" target="_blank">Results</a> </li>
+</ul>
+
+<h5 id="forecastingtools">&raquo; Forecasting Tools</h5>
+<ul class="nospace">
+  <li><b>Brian Tang, University at Albany:</b> <a style="color:black" href="http://www.atmos.albany.edu/facstaff/tang/forecast/" target="_blank"> WxChallenge Model Output</a></li>
+  <li><b>Penn State University:</b> <a style="color:black" href="http://www.meteo.psu.edu/fxg1/ewall.html" target="_blank">e-WALL:The Electronic Map Wall</a> </li>
+  <li><b>USL Model:</b> <a style="color:black" href="http://www.microclimates.org/forecast/wxchallenge.html" target="_blank">Hourly Point Forecasts for WxChallenge</a> </li>
+  <li><b>Iowa State University:</b> <a style="color:black" href="https://meteor.geol.iastate.edu/~ckarsten/bufkit/image_loader.phtml" target="_blank">Meteogram Generator</a> </li> 
+   <li><b>Iowa Environmental Mesonet:</b> <a style="color:black" href="https://mesonet.agron.iastate.edu/mos/" target="_blank">NWS MOS Archive</a> </li> 
+    <li><b>NOAA Meteorological Development Lab:</b> <a style="color:black" href="https://www.weather.gov/mdl/mos_getbull" target="_blank">Current MOS Forecast Products</a> </li>  
 </ul>
 
 
