--- a/resources.html
+++ b/resources.html
@@ -57,6 +57,10 @@
      <li><a style="color:#4d4d4d" href="#forecastingtools">&raquo; Forecasting Tools</a></li>
   </ul>  
 <li><a style="color:#4d4d4d" href="#opportunities">Opportunities</a></li>
+   <ul>
+    <li><a style="color:#4d4d4d" href="#internships">&raquo; Internships</a></li>
+    <li><a style="color:#4d4d4d" href="#conferences">&raquo; Conferences</a></li> 
+  </ul>  
 </ul>
 </div>  
  
@@ -237,7 +241,22 @@
 <div id="opportunities" class="section-title">
     Opportunities
 </div>  
-  
+
+<h5 id="internships">&raquo; Internships</h5>
+<ul class="nospace">
+  <li><a style="color:black" href="https://www.noaa.gov/opportunity-type/internship" target="_blank">National Oceanic and Atmospheric Administration</a></li>
+  <li><a style="color:black" href="https://soars.ucar.edu/" target="_blank">Significant Opportunities in Atmospheric Research and Science Program</a></li> 
+</ul>
+
+<h5 id="conferences">&raquo; Conferences</h5>
+<ul class="nospace">
+  <li><b>American Association for the Advancement of Science:</b><a style="color:black" href="https://meetings.aaas.org/" target="_blank">Annual Meeting</a></li>
+  <li><b>American Geophysical Union: </b><a style="color:black" href="https://www.agu.org/fall-meeting" target="_blank">Fall Meeting</a></li>
+  <li><b>American Meteorological Society: </b><a style="color:black" href="https://annual.ametsoc.org/" target="_blank">Annual Meeting</a> | <a style="color:black" href="https://www.ametsoc.org/ams/index.cfm/meetings-events/upcoming-meetings/" target="_blank">Upcoming Meetings</a></li>
+  <li><b>Graduate Climate Conference:</b><a style="color:black" href="http://www.graduateclimateconference.com/" target="_blank">Main Page</a> | <a style="color:black" href="http://gradclimateconf.mit.edu/" target="_blank">MIT page</a></li>
+</ul>  
+
+
  <!--<a style="color:black" href="" target="_blank"></a>--> 
 <footer>
   <div id="footer-content">
