--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="research.html">Research</a>
     <a href="leadership.html">Leadership</a>
     <a href="resources.html">Resources</a>
-    <a href="#">CV</a>
+    <a href="cv.html">CV</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
