--- a/cv.html
+++ b/cv.html
@@ -15,10 +15,10 @@
 
 <div class="topnav" id="myTopnav">
     <a href="index.html">Home</a>
-    <a href="#" class="active">Research</a>
+    <a href="research.html">Research</a>
     <a href="leadership.html">Leadership</a>
     <a href="resources.html">Resources</a>
-    <a href="#">CV</a>
+    <a href="#" class="active">CV</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
