--- a/cv.html
+++ b/cv.html
@@ -29,7 +29,15 @@
   <div class="section-title">
     Education
   </div>
+<div class="container">
+				<img style="padding-right:15px" align="left" src="https://upload.wikimedia.org/wikipedia/commons/0/0c/MIT_logo.svg" width="95"/>
+			<p> <b>Ph.D., Atmospheric Science, 2019</b> </br>
+            Massachusetts Institute of Technology (MIT) </br>
+            Advisor: Kerry Emanuel
+            
+            </p>
 
+</div>
 
   <div class="section-title">
     Honors and Awards
