--- a/cv.html
+++ b/cv.html
@@ -30,11 +30,10 @@
     Education
   </div>
 <div class="container">
-				<img style="padding-right:15px" align="left" src="https://upload.wikimedia.org/wikipedia/commons/0/0c/MIT_logo.svg" width="95"/>
-			<p> <b>Ph.D., Atmospheric Science, 2019</b> </br>
+   <img style="width:100px;height:auto;padding-right:15px; padding-left:30px" align="left" src="https://upload.wikimedia.org/wikipedia/commons/0/0c/MIT_logo.svg" >
+	    <p> <b>Ph.D., Atmospheric Science, 2019</b> </br>
             Massachusetts Institute of Technology (MIT) </br>
-            Advisor: Kerry Emanuel
-            
+            Advisor: Kerry Emanuel>
             </p>
 
 </div>
