--- a/cv.html
+++ b/cv.html
@@ -36,6 +36,23 @@
             Advisor: Kerry Emanuel>
             </p>
 
+<div class="container">
+  <div class="clearfix">
+    <div class="cvleftcolumn"></br> 
+    <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/MIT_logo.svg" class="centered">
+    </div> 
+    <div class="cvrightcolumn">
+      </br> 
+      <p>
+      <b>Ph.D., Atmospheric Science, 2019</b> </br>
+      Massachusetts Institute of Technology (MIT) </br>
+      Advisor: Kerry Emanuel
+      </p>
+    </div> 
+    </div>
+</div>
+
+
 </div>
 
   <div class="section-title">
