--- a/cv.html
+++ b/cv.html
@@ -29,12 +29,13 @@
   <div class="section-title">
     Education
   </div>
-<div class="container">
+<!---<div class="container">
    <img style="width:30%;height:auto;max-width=50%;padding-right:15px; padding-left:30px" align="left" src="https://upload.wikimedia.org/wikipedia/commons/0/0c/MIT_logo.svg" href="https://web.mit.edu/">
 	    <p> <b>Ph.D., Atmospheric Science, 2019</b> </br>
             Massachusetts Institute of Technology (MIT) </br>
             Advisor: Kerry Emanuel>
             </p>
+--->
 
 <div class="container">
   <div class="clearfix">
