--- a/cv.html
+++ b/cv.html
@@ -40,7 +40,7 @@
 <div class="container">
   <div class="clearfix">
     <div class="cvleftcolumn"></br> 
-    <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/MIT_logo.svg" class="centered">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/MIT_logo.svg" class="logo">
     </div> 
     <div class="cvrightcolumn">
       </br> 
@@ -52,6 +52,24 @@
     </div> 
     </div>
 </div>
+<div class="container">
+  <div class="clearfix">
+    <div class="cvleftcolumn"></br> 
+    <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/MIT_logo.svg" class="logo">
+    </div> 
+    <div class="cvrightcolumn">
+      </br> 
+      <p>
+      <b>B.S., Theoretical Physics, 2012</b> </br>
+      <b>Minor: Atmospheric Science and Meteorology</b> </br>
+      University of Puerto Rico at Mayagüez (UPRM) </br>
+      <i>Summa Cum Laude</i>
+      </p>
+    </div> 
+    </div>
+</div>
+
+
 
 
 </div>
