--- a/cv.html
+++ b/cv.html
@@ -55,7 +55,7 @@
 <div class="container">
   <div class="clearfix">
     <div class="cvleftcolumn"></br> 
-    <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/MIT_logo.svg" class="logo">
+    <img src="https://en.wikipedia.org/wiki/University_of_Puerto_Rico_at_Mayag%C3%BCez#/media/File:UPR_at_Mayaguez_Seal.svg" class="logo">
     </div> 
     <div class="cvrightcolumn">
       </br> 
