--- a/cv.html
+++ b/cv.html
@@ -43,7 +43,7 @@
     <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/MIT_logo.svg" class="logo">
     </div> 
     <div class="cvrightcolumn">
-      </br> 
+
       <p>
       <b>Ph.D., Atmospheric Science, 2019</b> </br>
       Massachusetts Institute of Technology (MIT) </br>
@@ -55,10 +55,10 @@
 <div class="container">
   <div class="clearfix">
     <div class="cvleftcolumn"></br> 
-    <img src="https://en.wikipedia.org/wiki/University_of_Puerto_Rico_at_Mayag%C3%BCez#/media/File:UPR_at_Mayaguez_Seal.svg" class="logo">
+    <img src="https://en.wikipedia.org/wiki/University_of_Puerto_Rico_at_Mayagüez#/media/File:UPR_at_Mayaguez_Seal.svg" class="logo">
     </div> 
     <div class="cvrightcolumn">
-      </br> 
+
       <p>
       <b>B.S., Theoretical Physics, 2012</b> </br>
       <b>Minor: Atmospheric Science and Meteorology</b> </br>
