--- a/cv.html
+++ b/cv.html
@@ -55,7 +55,7 @@
 <div class="container">
   <div class="clearfix">
     <div class="cvleftcolumn"></br> 
-    <img src="https://en.wikipedia.org/wiki/University_of_Puerto_Rico_at_Mayagüez#/media/File:UPR_at_Mayaguez_Seal.svg" class="logo">
+    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/65/UPR_at_Mayaguez_Seal.svg/800px-UPR_at_Mayaguez_Seal.svg.png" class="logo">
     </div> 
     <div class="cvrightcolumn">
 
