--- a/cv.html
+++ b/cv.html
@@ -29,18 +29,11 @@
   <div class="section-title">
     Education
   </div>
-<!---<div class="container">
-   <img style="width:30%;height:auto;max-width=50%;padding-right:15px; padding-left:30px" align="left" src="https://upload.wikimedia.org/wikipedia/commons/0/0c/MIT_logo.svg" href="https://web.mit.edu/">
-	    <p> <b>Ph.D., Atmospheric Science, 2019</b> </br>
-            Massachusetts Institute of Technology (MIT) </br>
-            Advisor: Kerry Emanuel>
-            </p>
---->
 
 <div class="container">
   <div class="clearfix">
     <div class="cvleftcolumn"></br> 
-    <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/MIT_logo.svg" class="logo">
+    <a href="https://web.mit.edu/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/MIT_logo.svg" class="logo"></a>
     </div> 
     <div class="cvrightcolumn">
       <p>
@@ -54,7 +47,7 @@
 <div class="container">
   <div class="clearfix">
     <div class="cvleftcolumn"></br> 
-    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/65/UPR_at_Mayaguez_Seal.svg/800px-UPR_at_Mayaguez_Seal.svg.png" class="logo">
+    <a href="https://www.uprm.edu/portada/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/65/UPR_at_Mayaguez_Seal.svg/800px-UPR_at_Mayaguez_Seal.svg.png" class="logo"></a>
     </div> 
     <div class="cvrightcolumn">
       <p>
