--- a/cv.html
+++ b/cv.html
@@ -50,7 +50,7 @@
     <a href="https://www.uprm.edu/portada/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/65/UPR_at_Mayaguez_Seal.svg/800px-UPR_at_Mayaguez_Seal.svg.png" class="logo"></a>
     </div> 
     <div class="cvrightcolumn">
-      <p>
+      <p style="padding-top:10px">
       <b>B.S., Theoretical Physics, 2012</b> </br>
       <b>Minor: Atmospheric Science and Meteorology</b> </br>
       University of Puerto Rico at Mayagüez (UPRM) </br>
