--- a/cv.html
+++ b/cv.html
@@ -32,18 +32,19 @@
 
 <div class="container">
   <div class="clearfix">
-    <div class="cvleftcolumn"></br> 
-    <a href="https://web.mit.edu/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/MIT_logo.svg" class="logo"></a>
-    </div> 
-    <div class="cvrightcolumn">
-      <p>
-      <b>Ph.D., Atmospheric Science, 2019</b> </br>
-      Massachusetts Institute of Technology (MIT) </br>
-      Advisor: Kerry Emanuel
-      </p>
-    </div> 
-    </div>
+      <div class="cvleftcolumn"></br> 
+       <a href="https://web.mit.edu/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/MIT_logo.svg" class="logo"></a>
+      </div> 
+      <div class="cvrightcolumn">
+        <p>
+        <b>Ph.D., Atmospheric Science, 2019</b> </br>
+        Massachusetts Institute of Technology (MIT) </br>
+        Advisor: Kerry Emanuel
+        </p>
+      </div> 
+ </div>
 </div>
+
 <div class="container">
   <div class="clearfix">
     <div class="cvleftcolumn"></br> 
@@ -59,16 +60,24 @@
     </div> 
     </div>
 </div>
-
-
-
-
-</div>
+</br>
 
   <div class="section-title">
     Honors and Awards
   </div>
-
+<div class="container">
+  <div class="clearfix">
+      <div class="cvleftcolumn"></br> 
+       <a href="https://web.mit.edu/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/MIT_logo.svg" class="logo"></a>
+      </div> 
+      <div class="cvrightcolumn">
+        <p>
+        <b>Warren G. Klein Fellowship, 2014</b> </br>
+        Massachusetts Institute of Technology </br>
+        </p>
+      </div> 
+ </div>
+</div>
 
   <div class="section-title">
     Research Experience
