--- a/cv.html
+++ b/cv.html
@@ -85,7 +85,7 @@
        <a href="https://www.nsf.gov/" target="_blank"><img src="https://www.nsf.gov/images/logos/NSF_4-Color_bitmap_Logo.png" class="logo"></a>
       </div> 
       <div class="cvrightcolumn">
-        <p>
+        <p style="padding-top:10px">
         <b>Graduate Research Fellowship, 2013 </b> </br>
         National Science Foundation </br>
         </p>
