--- a/cv.html
+++ b/cv.html
@@ -92,6 +92,21 @@
       </div> 
  </div>
 </div>
+
+<div class="container">
+  <div class="clearfix">
+      <div class="cvleftcolumn"></br> 
+       <a href="https://www.uprm.edu/portada/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/65/UPR_at_Mayaguez_Seal.svg/800px-UPR_at_Mayaguez_Seal.svg.png" class="logo"></a>
+      </div> 
+      <div class="cvrightcolumn">
+        <p style="padding-top:10px">
+        <b>Enrico Fermi Medal, 2012 </b> </br>
+        Physics Department, </br>
+        University of Puerto Rico at Mayagüez
+        </p>
+      </div> 
+ </div>
+</div>
 </br>
 
   <div class="section-title">
