--- a/cv.html
+++ b/cv.html
@@ -80,7 +80,7 @@
       <div class="cvrightcolumn">
         <p>
         <b>Warren G. Klein Fellowship, 2014</b> </br>
-        Massachusetts Institute of Technology </br>
+        Massachusetts Institute of Technology 
         </p>
       </div> 
  </div>
@@ -94,7 +94,7 @@
       <div class="cvrightcolumn">
         <p style="padding-top:10px">
         <b>Graduate Research Fellowship, 2013 </b> </br>
-        National Science Foundation </br>
+        National Science Foundation 
         </p>
       </div> 
  </div>
@@ -107,13 +107,29 @@
       </div> 
       <div class="cvrightcolumn">
         <p style="padding-top:10px">
-        <b>Enrico Fermi Medal, 2012 </b> </br>
+        <b>Enrico Fermi Medal, 2012</b> </br>
         Physics Department, </br>
         University of Puerto Rico at Mayagüez
         </p>
       </div> 
  </div>
 </div>
+
+<div class="container">
+  <div class="clearfix">
+      <div class="cvleftcolumn"></br> 
+       <a href="https://www.ametsoc.org/index.cfm/ams/" target="_blank"><img src="https://www.ametsoc.org/ams/assets/Image/AMSlogoC-web.jpg" class="logo"></a>
+      </div> 
+      <div class="cvrightcolumn">
+        <p style="padding-top:10px">
+        <b>Howard T. Orville Endowed Scholarship in Meteorology, 2011</b> </br>
+        American Meteorological Society
+        </p>
+      </div> 
+ </div>
+</div>
+
+
 </br>
 
   <div class="section-title">
