--- a/cv.html
+++ b/cv.html
@@ -32,8 +32,8 @@
   </br>
 <hr size=2 noshade>
 </br>
-     <h1> Diamilet Pérez-Betancourt</h1>
-  <p class="centered"> Postdoctoral Associate</p>
+     <h1> Diamilet Pérez-Betancourt, Ph.D.</h1>
+<p class="centered"> <b>Postdoctoral Associate</b></p>
   <p class="centered"> International Hurricane Research Center, Extreme Events Institute, Florida International University</p>
   
   <div class="section-title">
@@ -150,6 +150,23 @@
   <div class="section-title">
     Research Experience
   </div>
+
+<div class="container">
+  <div class="clearfix">
+      <div class="cvleftcolumn"></br> 
+      <a href="https://web.mit.edu/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/MIT_logo.svg" class="logo"></a>
+      </div> 
+      <div class="cvrightcolumn">
+        <p style="padding-top:10px">
+        <b>Formation and Maintenance of Tropical Cyclone Spiral Bands in Idealized Numerical Simulations</b>, 2012-2018</br>
+        Thesis committee: Kerry Emanuel (advisor, MIT), Alan Plumb (MIT), Zhiming Kuang (Harvard), and Robert A. Houze, Jr. (University of Washington) </br>
+        Graduate research at MIT
+        </p>
+      </div> 
+ </div>
+</div>
+</br>
+
   
   <div class="section-title">
     Publications
